# Computer-Vision-for-Faces

./: .gitignore  CMakeLists.txt  CMakeLists.txt.user.7966b5a  CMakeLists.txt.user.cca9fe0  README.md
cmake/: LibrariesList.cmake  ProductConfig.cmake
cmake/Templates/: ModelPath.h.in
foundation/: Target.cmake
src/Application/VisionApp/: Aplication.cpp  Application.h  Mediator.cpp  Mediator.h  SettingsManager.cpp  SettingsManager.h  VisionApp.cmake  main.cpp
src/Application/VisionApp/Helpers/: EffectHelper.cpp  EffectHelper.h  ImageHelper.cpp  ImageHelper.h  TrainingHelper.cpp  TrainingHelper.h  TrainingTypes.h  UndoHelper.cpp  UndoHelper.h
src/Application/VisionApp/ImageUtils/: ImageUtils.cpp  ImageUtils.h
src/Application/VisionApp/UI/: BottomPanel.cpp  BottomPanel.h  BottomPanel.ui  MainWindow.cpp  MainWindow.h  MainWindow.ui  Scene.cpp  Scene.h  SettingsPanel.cpp  SettingsPanel.h  SettingsPanel.ui  TopPanel.cpp  TopPanel.h  TopPanel.ui
src/Application/VisionApp/UI/CapturePanel/: CapturePanel.cpp  CapturePanel.h  CapturePanel.ui
src/Application/VisionApp/UI/EffectsPanel/: DoubleFieldSpinBox.cpp  DoubleFieldSpinBox.h  EffectsPanel.cpp  EffectsPanel.h  EffectsPanel.ui  EffectsSettings.cpp  EffectsSettings.h  IntFieldSpinBox.cpp  IntFieldSpinBox.h
src/Application/VisionApp/UI/MainWindow/: BottomPanel.cpp  BottomPanel.h  BottomPanel.ui  MainWindow.cpp  MainWindow.h  MainWindow.ui  SettingsPanel.cpp  SettingsPanel.h  TopPanel.cpp  TopPanel.ui
src/Application/VisionApp/UI/Scene/: Scene.cpp  Scene.h
src/Application/VisionApp/UI/TrainingPanel/: LandmarkPreferenceDialog.cpp  LandmarkPreferenceDialog.h  LandmarkPreferenceDialog.ui  TrainingPanel.cpp  TrainingPanel.h  TrainingPanel.ui  TrainingTypes.h
src/Capture/: Capture.cmake
src/Capture/Capture/: CaptureInfo.h
src/Capture/Capture/Controller/: CaptureController.cpp  CaptureController.h
src/Core/: Core.cmake
src/Core/Core/CoreTypes/: ColorSpaces.h  FrameInfo.h
src/Core/Core/DataImage/: CvDataImage.cpp  CvDataImage.h  QDataImage.cpp  QDataImage.h
src/Core/Core/Interfaces/: IDataImage.h
src/Core/Core/Utils/: ImageUtils.cpp  ImageUtils.h
src/Proc/: Proc.cmake
src/Proc/Proc/Effects/: EffectColorTransfer.cpp  EffectColorTransfer.h  EffectDetailsEnhance.cpp  EffectDetailsEnhance.h  EffectDrawLandmarks.cpp  EffectDrawLandmarks.h  EffectEyeShadow.cpp  EffectEyeShadow.cpp.autosave  EffectEyeShadow.h  EffectFaceDetection.cpp  EffectFaceDetection.h  EffectFaceSwap.cpp  EffectFaceSwap.h  EffectFilter.cpp  EffectFilter.h
src/Proc/Proc/Effects/Factory/: EffectsFactory.cpp  EffectsFactory.h
src/Proc/Proc/Interfaces/: IEffect.h  IEffectOne.h  IEffectTwo.h  IEffectsFactory.h
src/Proc/Proc/Settings/: BaseSettings.h  SettingsColorTransfer.h  SettingsDetailsEnhance.h  SettingsDrawLandmarks.h  SettingsEyeShadow.h  SettingsFaceDetection.h  SettingsFaceSwap.h  SettingsFilter.h  Stub.cpp
src/Proc/Proc/Utils/: ProcUtils.cpp  ProcUtils.h
src/Types/: Types.cmake
src/Types/Types/: Face.cpp  Face.h  Point.cpp  Point.h  Pointers.h
src/Utils/: Utils.cmake
src/Utils/Utils/: ObjectsConnector.cpp  ObjectsConnector.h  ObjectsConnectorID.h
